tests/NormalTests/paczka1/small_fuzzy/70158072.err
Error in line 4: YH96y1o3 S539 44,8
Error in line 2: LcTRj S16 98,8
Error in line 8: wtYg S16 60,2
Error in line 12: wtYg A391 19,1
